Closed
Bug 1281999
Opened 9 years ago
Closed 9 years ago
[webvtt] Closed caption should be removed once text track mode is set to "disabled"
Categories
(Core :: Audio/Video: Playback, defect, P3)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
mozilla50
| Tracking | Status | |
|---|---|---|
| firefox50 | --- | fixed |
People
(Reporter: ralin, Assigned: bechen)
References
Details
Attachments
(1 file)
Environment:
Build: Nightly 50.0a1 (6/24)
Steps to reproduce:
1. Go to http://www.html5rocks.com/en/tutorials/video/basics
2. Play video
3. Set the mode of video's first text track to "disabled" manually in console
Expected result:
Closed caption should be hidden immediately
Actual result:
Last shown cue remain on the video
| Reporter | ||
Comment 1•9 years ago
|
||
Hi, Benjamin
Could you help with this problem? Thank you so much.
Flags: needinfo?(bechen)
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → bechen
Flags: needinfo?(bechen)
Updated•9 years ago
|
Priority: -- → P2
| Assignee | ||
Comment 2•9 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/61780/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/61780/
Attachment #8767078 -
Flags: review?(giles)
Updated•9 years ago
|
Attachment #8767078 -
Flags: review?(giles) → review+
Comment 3•9 years ago
|
||
Comment on attachment 8767078 [details]
Bug 1281999 - Update the display when we remove an active cue by changing the texttrackmode to disabled.
https://reviewboard.mozilla.org/r/61780/#review58910
Mass change P2 -> P3
Priority: P2 → P3
| Assignee | ||
Comment 5•9 years ago
|
||
Comment on attachment 8767078 [details]
Bug 1281999 - Update the display when we remove an active cue by changing the texttrackmode to disabled.
Review request updated; see interdiff: https://reviewboard.mozilla.org/r/61780/diff/1-2/
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 6•9 years ago
|
||
Comment on attachment 8767078 [details]
Bug 1281999 - Update the display when we remove an active cue by changing the texttrackmode to disabled.
Review request updated; see interdiff: https://reviewboard.mozilla.org/r/61780/diff/2-3/
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/c74b25c022b7
Update the display when we remove an active cue by changing the texttrackmode to disabled. r=rillian
Keywords: checkin-needed
Comment 8•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox50:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in
before you can comment on or make changes to this bug.
Description
•