Bug 1281999 - Update the display when we remove an active cue by changing the texttrackmode to disabled. r=rillian

MozReview-Commit-ID: GeF5Icd9jLu